--- a/EX03/demo.css
+++ b/EX03/demo.css
@@ -1,7 +1,5 @@
 body{
-	margin-left: 400px;
-	width: 600px;
-	height: 900px;
+	font-family: "Microsoft JhengHei";
 }
 .frame1{
 	border: 1px solid black;
@@ -11,26 +9,33 @@ body{
 	border-left: 1px solid black;
 	border-bottom: 1px solid black;
 }
-.frame3{
-	border-bottom: 1px solid black;	
-}
 .first{
 	width: 400px;
 	height: 100px;
 }
+#ff div{
+	float: left;
+	width: 80px;
+	height: 20px;
+	margin: 0px;
+	text-align: center;
+}
+.b0{
+	background: #dbd2d2;
+}
 .p1{
 	position: absolute;
 	margin-top:40px;
-	margin-left: 50px; 
-	width: 300px;
+	margin-left: 25px; 
+	width: 350px;
 	height: 25px;
 	background: lightgray;
 }
 .p2{
 	position: absolute;
 	margin-top:70px;
-	margin-left: 50px; 
-	width: 300px;
+	margin-left: 25px; 
+	width: 350px;
 	height: 25px;
 	background: lightgray;
 }
@@ -41,17 +46,13 @@ body{
 }
 .same div{
 	float:left;
-	text-align:center;
-}
-.s1{
-	width: 580px;
-	height: 100px;
 }
 .pit{
+	margin-top: 10px;
+	margin-left: -250px; 
 	width: 100px;
 	height: 130px;
-	margin: 10px;
-	background: orange;
+	background: #ff4400;
 }
 .s2f{
 	margin-left: 130px;
@@ -68,13 +69,13 @@ body{
 	background: lightgray;
 }
 .p3{
+	color: white;
 	margin-top: 45px; 
 	margin-left: 45px; 
 	width: 80px;
 	height: 30px;
-	background: orange;
+	background: #ff4400;
 }
-
 .third{
 	width: 400px;
 	height: 50px;
@@ -90,47 +91,48 @@ body{
 
 .fourth{
 	width: 400px;
-	height: 400px;
-}
-.fouth1{
-	width: 400px;
-	height: 280px;
-}
-.blo2{
-	width: 250px;
-	height: 120px;
-	margin: 10px;
-}
-.blo1{
-	width: 250px;
-	height: 60px;
-	margin: 10px;
-}
-.h{
-	height: 70px;
-	float: left;
-}
-.pits{
-	width: 50px;
-	height: 50px;
-	margin: 10px;
-	background: orange;
+	height: 300px;
 }
 
 .big {
-	background-color: blue;
 	width: 160px;
 	height: 200px;
 	float: left;
 }
-
 .small {
-	background-color: pink;
 	width: 80px;
 	height: 100px;
 	float: left;
+}
+
+.bigpit{
+	margin-top: 10px; 
+	width: 120px;
+	height: 140px;
+	background: #ff4400;
+}
+.smallpit{
+	margin-top: 10px; 
+	width: 40px;
+	height: 60px;
+	background: #ff4400;
+}
+.border1{
 	box-sizing: border-box;
 	border-style: solid;
-	border-color: black;
-	border-width: 1px;
+	border-right-color: black;
+	border-right-width: 1px;
+	border-bottom-color: black;
+	border-bottom-width: 1px;
+	border-top-width: 0px;
+	border-left-width: 0px;
+}
+.border2{
+	box-sizing: border-box;
+	border-style: solid;
+	border-right-width: 0px;
+	border-bottom-color: black;
+	border-bottom-width: 1px;
+	border-top-width: 0px;
+	border-left-width: 0px;
 }
