--- a/EX04/index.css
+++ b/EX04/index.css
@@ -1,6 +1,117 @@
 body{
 	background: #99bd90;
-	font-family: "Microsoft JhengHei";
+	font-family: "KaiTi";
+}
+.ui-content{
+	width: 800px;
+	height: 600px;
+	background: #cdd3f5;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+	border: solid 1px black;
+}
+.ui-content-1{
+	width: 760px;
+	height: 120px;
+	background: #99bd90;
+	display: flex;
+	border: solid 1px black;
+}
+.ui-content-1-left{
+	width: 500px;
+	height: 120px;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+.ui-content-1-right{
+	width: 240px;
+	height: 120px;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+}
+.bigsquare{
+	width: 80px;
+	height: 80px;
+	background: #cdd3f5;
+	border: solid 1px black;
+}
+
+.ui-content-2{
+	width: 760px;
+	height: 420px;
+	background: #99bd90;
+	display: flex;
+	border: solid 1px black;
+}
+.ui-content-2-left{
+	width: 240px;
+	height: 410px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+}
+.left-top{
+	width: 240px;
+	height: 340px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.left-down{
+	width: 240px;
+	height: 70px;
+	display: flex;
+}
+.space{
+	width: 20px;
+	height: 60px;
+}
+.space-then{
+	width: 200px;
+	height: 60px;
+	display: flex;
+	justify-content: space-between;
+}
+.ui-content-2-right{
+	width: 520px;
+	height: 420px;
+	display: flex;
+	flex-direction: column;
+}
+.right-top{
+	width: 520px;
+	height: 20px;
+}
+.right-down{
+	width: 520px;
+	height: 370px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+}
+.smallsquare{
+	width: 50px;
+	height: 50px;
+	background: #cdd3f5;
+	border: solid 1px black;
+}
+.bigrectangle{
+	width: 200px;
+	height: 300px;
+	background: #cdd3f5;
+	border: solid 1px black;
+}
+.smallrectangle{
+	width: 480px;
+	height: 40px;
+	background: #cdd3f5;
+	border: solid 1px black;
 }
 .ui-main{
 	width: 390px;
@@ -21,6 +132,10 @@ body{
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
+}
+.ui-1:before{
+	content: "";
+
 }
 .ui-1{
 	width: 370px;
@@ -53,15 +168,14 @@ body{
 }
 .ui-3-1-m1{
 	color: #f70b42;
-	font-size: 22px;
+	font-size: 24px;
 }
 .ui-3-1-m2{
 	font-size: 8px;
 	font-weight: 100;
-	margin-top: 10px;
+	margin-top: 14px;
 	text-decoration:line-through;
 }
-
 .ui-3-2{
 	color: #f70b42;
 	margin-top: 10px;
@@ -71,4 +185,14 @@ body{
 	font-weight: 100;
 	content: "件已售";
 	color: black;
+}
+.ui-container{
+	background: #f2f2f2;
+	margin: 20px;
+	width: 1230px;
+	height: 800px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	align-items: center;
 }
