--- a/EX05/index.css
+++ b/EX05/index.css
@@ -9,8 +9,7 @@ body{
 	justify-content: space-between;
 }
 .content-0{
-	margin: auto;
-	top: 20px;
+	margin-top: 20px;
 	width: 470px;
 	height: 260px;
 	display: flex;
@@ -41,7 +40,7 @@ body{
 
 
 .content-1{
-	margin: auto;
+	margin-top: 20px;
 	width: 470px;
 	height: 260px;
 }
@@ -78,7 +77,7 @@ body{
 	margin: auto;
 	border: solid black 1px;
 	background: white;
-	
+
 }
 .content-top{
 	width: 470px;
