--- a/EX05/index.css
+++ b/EX05/index.css
@@ -127,14 +127,13 @@ body{
 }
 .main-1-down a{
 	margin-right: 8px;
+	margin-left: 2px;
 	color: #002cbd;
 }
 .pos{
 	margin-top: 5px;
 	margin-right: 2px;
 }
-
-
 .main-2{
 	margin-top: 5px; 	
 	width: 685px;
@@ -177,7 +176,7 @@ body{
     display: flex;
     align-items: center;
     text-align: center;
-    font-size: 13px;
+    font-size: 12px;
 }
 .main-2-body-name{
 	width: 405px;
