--- a/EX07/index.css
+++ b/EX07/index.css
@@ -273,7 +273,7 @@
 	text-align: center;
 	background: #00c2ae;
 	transform: rotate(-45deg);
-	color: #f5fdfd;
+	color: white;
 }
 .note-top{
 	margin-top: 10px;
