--- a/EX07/index.css
+++ b/EX07/index.css
@@ -334,3 +334,238 @@
 	margin-top: 12px;
 	color: #00b1cf;
 }
+
+.ui-pc{
+	margin: auto;
+	margin-top: 10px;
+	width: 1000px;
+}
+.ui-pc-main{
+	width: 1000px;
+	height: 70px;
+	background: #008def;
+	padding-left: 70px;
+	padding-right: 70px;
+}
+.ui-pc-top{
+	height: 70px;
+}
+.ui-pc-top-first{
+	display: flex;
+	justify-content: flex-end;
+	margin-top: 10px;
+	color: white;
+}
+.ui-pc-top-first div{
+	cursor: pointer;
+}
+.ui-pc-top-firsttext{
+	margin-top: 2px;
+	padding-right: 5px;
+	margin-right: 5px;
+	height: 15px;
+	border-right: solid 1px white; 
+}
+.ui-pc-top-second{
+	display: flex;
+	justify-content: space-between;
+	margin-top: 5px;
+}
+.ui-pc-top-title{
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	color: white;
+	line-height: 20px;
+	font-size: 13px;
+}
+.ui-pc-top-title div{
+	cursor: pointer;
+}
+.ui-pc-top-title-re{
+	width: 40px;
+	text-align: center;
+	height: 20px;
+	background: #0069b4;
+}
+.ui-pc-top-input{
+	width: 200px;
+	height: 25px;
+	background: white;
+	border-radius: 2px;
+	display: flex;
+	align-items: center;
+	text-align: center;
+	justify-content: space-between;
+}
+.ui-pc-top-input div{
+	cursor: pointer;
+}
+.ui-pc-top-input-left{
+	width: 45px;
+	padding-left: 5px;
+	text-align: center;
+	background: #f9f9f9;
+}
+.ui-pc-top-input-right{
+	text-align: center;
+	margin-top: -7px;
+	color: #9b9b9b;
+}
+.ui-pc-body-top{
+	padding-left: 60px;
+	padding-right: 60px;
+	height: 260px;
+	margin-top: 20px;
+}
+.ui-pc-body-top-left{
+	width: 565px;
+	height: 220px;
+	background: #666;
+	border: 1px solid #c1c1c1;
+}
+.ui-pc-body-top-right{
+	width: 270px;
+	height: 220px;
+	background: #f4f4f4;
+}
+.ui-pc-body-top-right-head{
+	height: 140px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+}
+.ui-pc-body-top-head-text{
+	margin-top: 20px;
+	color: #009dff;
+	text-align: center;
+}
+.ui-pc-body-top-head-re{
+	width: 125px;
+	height: 35px;
+	background: #009dff;
+	border-radius: 4px;
+	margin-bottom: 20px;
+}
+.ui-pc-body-top-right-foot{
+	margin: auto;
+	width: 220px;
+	height: 80px;
+	border-top: 1px dashed #009dff;
+}
+.ui-pc-body-top-ims{
+	margin: auto;
+	margin-top: 20px;
+	width: 200px;
+	height: 40px;
+	display: flex;
+	justify-content: center;
+    flex-wrap: wrap;
+	align-content: center;
+}
+.ui-pc-body-top-im{
+	display: flex;
+	width: 100px;
+	height: 20px;
+	justify-content: center;
+}
+.ui-pc-body-top-im-num{
+	color: #009dff;
+	margin-right: 5px;
+}
+.ui-pc-body-down{
+	padding-left: 60px;
+	padding-right: 60px;
+	margin-top: -20px;
+}
+.ui-pc-body-down-right-title1{
+	font-weight: bold;
+	cursor: pointer;
+}
+.ui-pc-body-down-right-title2{
+	cursor: pointer;
+}
+.ui-pc-body-down-right1{
+	margin-top: 10px;
+	width: 270px;
+	height: 210px;
+	padding: 10px;
+	border: solid 1px #e3e3e3;
+	border-bottom: 3px solid #0092f1;
+	display: flex;
+	flex-wrap: wrap;
+	font-size: 12px;
+	position: relative;
+	overflow: hidden;
+}
+.ui-pc-right-bigsquare{
+	width: 245px;
+	height: 90px;
+	background: #666;
+	border: 1px solid #c1c1c1;
+}
+.ui-pc-body-down-right1-title{
+	margin-top: 5px;
+	font-size: 15px;
+	font-weight: bold;
+}
+.ui-pc-body-down-right1-num{
+	margin-bottom: -15px;
+	display: flex;
+    color: #9a9a9a;
+}
+.linepos{
+	margin-left: 10px;
+	margin-right: 10px;
+}
+.start{
+	position: absolute;
+	width: 150px;
+	height: 25px;
+	top: 6%;
+	left: 64%;
+	line-height: 25px;
+	font-size: 11px;
+	text-align: center;
+	background: #0091F0;
+	transform: rotate(45deg);
+	color: #F0F9FD;
+}
+.ui-pc-body-down-rightdown{
+	margin-top: 10px;
+	width: 270px;
+	height: 185px;
+	border: solid 1px #e3e3e3;
+}
+.ui-pc-body-down-right2{	width: 270px;
+	height: 50px;
+	padding: 10px;
+}
+.ui-pc-body-down-right-title3{
+	font-weight: bold;
+	color: #0091f0;
+}
+.ui-pc-body-down-right3{
+	margin: auto;
+	width: 250px;
+	border-top: dashed 1px #cdcdcd;
+}
+.ui-pc-body-down-right3-re{
+	margin: auto;
+	margin-top: 20px;
+	width: 155px;
+	height: 90px;
+	background: #666;
+	border: solid 2px #c1c1c1;
+	display: flex;
+	align-items: flex-end;
+}
+.ui-pc-body-down-right3-re-re{
+	width: 100%;
+	height: 25px;
+	line-height: 25px;
+	background: #191919;
+	color: #d2d2d2;
+	text-align: center;
+}
